# cli

./: .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  RELEASING.md  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tsconfig.json  version.go  workflow.md
.github/homebrew/: pcr.rb.template
.github/workflows/: ci.yml  release.yml
cmd/: add.go  bundle.go  commit.go  fix_responses.go  gc.go  github.go  helpers.go  hook.go  init.go  log.go  login.go  logout.go  mcp.go  project_context.go  pull.go  push.go  push_test.go  root.go  show.go  start.go  status.go
crates/pcr-cli/: Cargo.toml
crates/pcr-cli/src/: main.rs
crates/pcr-cli/tests/: cursor_ingestion.rs  db_migration.rs  golden.rs  start_graceful_shutdown.rs
crates/pcr-cli/tests/common/: mod.rs
crates/pcr-core/: Cargo.toml
crates/pcr-core/src/: agent.rs  auth.rs  config.rs  entry.rs  exit.rs  help.rs  lib.rs  projects.rs  shutdown.rs  update_check.rs  versions.rs
crates/pcr-core/src/commands/: bundle.rs  gc.rs  help.rs  helpers.rs  hook.rs  init.rs  log.rs  login.rs  logout.rs  mod.rs  project_context.rs  pull.rs  push.rs  show.rs  start.rs  status.rs
crates/pcr-core/src/display/: events.rs  mod.rs  sink.rs
crates/pcr-core/src/mcp/: mod.rs
crates/pcr-core/src/sources/: mod.rs
crates/pcr-core/src/sources/claudecode/: hook.rs  mod.rs  parser.rs  watcher.rs
crates/pcr-core/src/sources/cursor/: db.rs  diff_tracker.rs  mod.rs  session_state_watcher.rs  watcher.rs
crates/pcr-core/src/sources/shared/: dedup.rs  git.rs  mod.rs  path_norm.rs  state.rs  tool_calls.rs
crates/pcr-core/src/sources/vscode/: chatsession_parser.rs  empty_window.rs  mod.rs  parser.rs  watcher.rs  workspace.rs
crates/pcr-core/src/store/: commits.rs  db.rs  diff_events.rs  drafts.rs  gc.rs  mod.rs  session_state_events.rs
crates/pcr-core/src/supabase/: mod.rs
crates/pcr-core/src/tui/: app.rs  events.rs  mod.rs  theme.rs
crates/pcr-core/src/tui/screens/: help.rs  mod.rs  show.rs  start.rs  status.rs
crates/pcr-core/src/tui/widgets/: event_log.rs  header_bar.rs  mod.rs  project_row.rs  segmented_bar.rs  source_row.rs  sparkline.rs
crates/pcr-core/src/util/: id.rs  mod.rs  text.rs  time.rs
crates/pcr-core/tests/: claude_fixture_roundtrip.rs  claudecode_state_ordering.rs  drafts_update_response_scoped.rs  multi_repo_attribution.rs  vscode_fixture_roundtrip.rs
crates/pcr-core/tests/fixtures/claude/: minimal_session.jsonl
crates/pcr-core/tests/fixtures/vscode/: minimal_chatsession.jsonl
crates/pcr-napi/: Cargo.toml  NPM-INTERNALS.md  README.md  index.d.ts  index.js  package.json
crates/pcr-napi/npm/darwin-arm64/: package.json
crates/pcr-napi/npm/darwin-x64/: package.json
crates/pcr-napi/npm/linux-arm64-gnu/: package.json
crates/pcr-napi/npm/linux-x64-gnu/: package.json
crates/pcr-napi/npm/linux-x64-musl/: package.json
crates/pcr-napi/npm/win32-arm64-msvc/: package.json
crates/pcr-napi/npm/win32-x64-msvc/: package.json
crates/pcr-napi/src/: lib.rs
internal/auth/: auth.go
internal/config/: constants.go
internal/display/: display.go
internal/projects/: projects.go
internal/sources/: diff_tracker.go  registry.go  source.go
internal/sources/claudecode/: hook.go  parser.go  source.go  watcher.go
internal/sources/cursor/: db.go  diff_tracker.go  parser.go  session_state_watcher.go  source.go  watcher.go
internal/sources/shared/: dedup.go  git.go  state.go
internal/sources/vscode/: empty_window.go  parser.go  scan_debug_test.go  source.go  watcher.go  workspace.go
internal/store/: commits.go  diff_events.go  drafts.go  gc.go  session_state_events.go  store.go
internal/supabase/: supabase.go
internal/versions/: versions.go
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: cli.ts
src/commands/: github.ts  init.ts  login.ts  logout.ts  mcp.ts  start.ts  status.ts
src/lib/: auth.ts  constants.ts  projects.ts  supabase.ts  versions.ts
src/watchers/: claude-code-parser.ts  claude-code.ts  cursor-db.ts  cursor-parser.ts  cursor.ts
tests/: parser_test.go  test_fixes.sh
