[workspace]
resolver = "2"
members = [
    "crates/pcr-core",
    "crates/pcr-cli",
    "crates/pcr-napi",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pcr-developers/cli"
homepage = "https://pcr.dev"
rust-version = "1.82"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Terminal UI / output
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
owo-colors = { version = "4.1", features = ["supports-colors"] }
indicatif = "0.17"
is-terminal = "0.4"
inquire = "0.7"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# File watching
notify = "6.1"
notify-debouncer-full = { version = "0.3", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Misc
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
webbrowser = "1.0"
ctrlc = "3.4"
shell-words = "1.1"
once_cell = "1.19"
regex = "1.10"
urlencoding = "2.1"
walkdir = "2.5"
humantime = "2.1"

# NAPI
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"
napi-build = "2.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
